# pdf-converter

orders-converter/: pyproject.toml  requirements.txt
orders-converter/.github/workflows/: ci.yml
orders-converter/docs/: README.md
orders-converter/src/orders_converter/: cli.py  gui.py
orders-converter/src/orders_converter/core/: extractor.py  parser.py
orders-converter/src/orders_converter/io/: excel_writer.py  pdf_reader.py
orders-converter/src/orders_converter/utils/: logging_config.py
orders-converter/tests/integration/: test_cli_end_to_end.py
orders-converter/tests/unit/: test_excel_writer.py  test_parser.py  test_pdf_reader.py
