[project]
name = "orders-sheet-converter"
version = "0.1.0"
description = "Convert structured purchase-order PDFs to Excel."
authors = [
    {name = "Aditya Ajit Kamat", email = "adityakamat2000@icloud.com"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pdfplumber = "*"
pandas = "*"
openpyxl = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
orders-converter = "orders_converter.cli:main"
orders-converter-gui = "orders_converter.gui:main" 